# devrandom

./: .gitmodules
bep3/: 0001-add-bep3-support.patch  build.sh  embedded_thoughts.md  openocd.cfg  openocd.txt
cp_p/: cp_p.sh
ec/: .gitignore  Makefile
fatattr-label/: Makefile  README.md  fatattr-label.c.cpt
fuzzexec/: Makefile  fe.c
kernel_todo/: README.md  gen_todolist.sh
m210/: README.md
rsync/: README.md  backup.sh  backupconfig.sh.example
slides/: slides.tex
tor/: README.md
tor_router/: README.md
tslib/: 0001-Q-n-D-use-DRM-instead-of-FB.patch  0001-boundary-patchset.patch  README.md  fa_tslib.patch  lowpass.c
tslib/sdltest-1.0/: Makefile.in  config.h.in  configure  configure.ac
tslib/sdltest-1.0/src/: Makefile.am  Makefile.in  sdltest.c
x220/: R9N52CE_coreboot_seabios.rom.sha1sum  R9N52CE_orig_flash.bin.sha1sum  README.md  RPI_FLASHING.md  X220LenovoBIOS-1.43-EC-1.24-2016-10-26.iso.sha1sum  X220_R9N52CE_coreboot_seabios.config  X220_R9N52CE_orig_flash.bin.sha1sum  X230LenovoBIOS-2.68-EC-1.14-2017-04-28.iso.sha1sum  X230_NEW_4MB_bios_orig_flash.bin.sha1sum  X230_PK17C00_8MB_ifdmegbe_orig_flash.bin.sha1sum  X230_R9XAPP7_4MB_bios_orig_flash.bin.sha1sum  X230_R9XAPP7_8MB_ifdmegbe_orig_flash.bin.sha1sum  X230_R9XAPP7_coreboot_seabios.config  corebootconfig
x230/: README.md  RPI_FLASHING.md  X230LenovoBIOS-2.71-EC-1.14-2018-03-12.iso.sha1  X230_NEW_8MB_ifdmegbe_orig.bin.sha1  X230_NEW_8MB_ifdmegbe_orig_flash.bin.sha1sum  X230_PK17C00_4MB_bios_orig_flash.bin.sha1sum  X230_PK2CYRZ_4MB_bios_orig.bin.sha1  patched.x230.iso.report
(+82 files in other folders)
